...
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="46dp"
        tools:ignore="MissingConstraints">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_bill_detail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#ffff00"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            tools:ignore="MissingClass,MissingConstraints" >

            <Spinner
                android:id="@+id/add_spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:entries="@array/add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
...
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_time"
                app:layout_constraintStart_toStartOf="@+id/add_img_account"
                app:layout_constraintTop_toBottomOf="@+id/add_tv_account" />

            <EditText
                android:id="@+id/add_et_money"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:gravity="center"
                android:inputType="numberDecimal"
                app:layout_constraintStart_toEndOf="@+id/add_tv1_type"
                app:layout_constraintTop_toTopOf="@+id/add_img_money" />

            <EditText
                android:id="@+id/add_et_description"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:gravity="center"
                app:layout_constraintStart_toEndOf="@+id/add_tv1_type2"
                app:layout_constraintTop_toTopOf="@+id/add_img_description" />

...
                android:text="账户"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="@+id/add_img_account"
                app:layout_constraintTop_toBottomOf="@+id/add_img_account" />

            <EditText
                android:id="@+id/add_et_time"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:gravity="center"
...
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_account"
                app:layout_constraintStart_toStartOf="@+id/add_img_type"
                app:layout_constraintTop_toBottomOf="@+id/add_tv_type" />

            <Button
                android:id="@+id/add_bt_commit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/yellow"
                android:text="确认"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_et_description"
...
