...
<!--用于记账明细的item-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/recyclerView_fg_account_">


    <TextView
        android:id="@+id/textView_type"
        android:layout_width="44dp"
        android:layout_height="25dp"
...
    <TextView
        android:id="@+id/textView_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="04月25日 星期二"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView_money"
        app:layout_constraintTop_toBottomOf="@+id/textView_money"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_money"
        android:layout_width="100dp"
...
